// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`visual regression > bedroom-closet renders consistently 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1246.17" width="1200" height="1246.17">
<rect x="0" y="0" width="1200" height="1246.17" fill="white"/>
<g class="layer-structural">
<g class="walls">
<rect x="170.75" y="170.75" width="858.5" height="30.83" stroke="none" fill="#000"/>
<g fill="#000" stroke="none">
<rect x="170.75" y="884.58" width="315.42" height="30.83"/>
<rect x="656.92" y="884.58" width="372.33" height="30.83"/>
</g>
<g fill="#000" stroke="none">
<rect x="998.42" y="656.92" width="30.83" height="227.67"/>
<rect x="998.42" y="201.58" width="30.83" height="227.67"/>
</g>
<rect x="170.75" y="201.58" width="30.83" height="683" stroke="none" fill="#000"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="656.92" y1="915.42" x2="656.92" y2="744.66"/>
<path d="M 656.92,744.66 A 170.75,170.75 0 0,0 486.17,915.42"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="1006.13" y1="656.92" x2="1006.13" y2="429.25"/>
<line x1="1021.54" y1="656.92" x2="1021.54" y2="429.25"/>
</g>
<g class="enclosure-walls" id="enclosure-closet">
<g fill="#333" stroke="none">
<rect x="407.91" y="486.17" width="21.34" height="56.92"/>
<rect x="407.91" y="201.58" width="21.34" height="142.29"/>
</g>
<rect x="201.58" y="521.74" width="227.67" height="21.34" stroke="none" fill="#333"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="407.91" y1="486.17" x2="265.61" y2="486.17"/>
<path d="M 265.61,486.17 A 142.29,142.29 0 0,1 407.91,343.87"/>
</g>
</g>
<g class="layer-labels">
<text x="600" y="543.08" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="28.46" font-weight="500" text-anchor="middle" dominant-baseline="central">Primary Bedroom</text>
<text x="315.42" y="372.33" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="28.46" font-weight="500" text-anchor="middle" dominant-baseline="central">Walk-in Closet</text>
</g>
<g class="layer-dimensions">
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="201.58" y1="998.42" x2="998.42" y2="998.42"/>
<line x1="193.04" y1="1006.96" x2="210.12" y2="989.88"/>
<line x1="989.88" y1="1006.96" x2="1006.96" y2="989.88"/>
<text x="600" y="984.19" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="19.92" text-anchor="middle">14&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="87.75" y1="884.58" x2="87.75" y2="201.58"/>
<line x1="79.21" y1="893.12" x2="96.28" y2="876.05"/>
<line x1="79.21" y1="210.12" x2="96.28" y2="193.04"/>
<text x="73.52" y="543.08" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="19.92" text-anchor="middle" transform="rotate(-90, 73.52, 543.08)">12&apos;-0&quot;</text>
</g>
</g>
<g class="layer-title-block">
<g class="title-block" font-family="'Helvetica','Arial',sans-serif" fill="#000">
<rect x="830" y="1086.17" width="350" height="140" stroke="#000" stroke-width="0.50" fill="white"/>
<line x1="830" y1="1176.17" x2="1180" y2="1176.17" stroke="#000" stroke-width="0.35"/>
<text x="842" y="1110.17" font-size="18" font-weight="bold">Bedroom with Closet</text>
<text x="842" y="1214.17" font-size="12">Scale: 1/4in = 1ft</text>
<text x="1015" y="1214.17" fill="#666" font-size="10">FloorScript v0.1</text>
</g>
</g>
</svg>"
`;

exports[`visual regression > bedroom-nook renders consistently 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1246.17" width="1200" height="1246.17">
<rect x="0" y="0" width="1200" height="1246.17" fill="white"/>
<g class="layer-structural">
<g class="walls">
<g fill="#000" stroke="none">
<rect x="170.75" y="170.75" width="429.25" height="30.83"/>
<rect x="884.58" y="170.75" width="144.66" height="30.83"/>
</g>
<g fill="#000" stroke="none">
<rect x="170.75" y="884.58" width="144.66" height="30.83"/>
<rect x="486.17" y="884.58" width="543.08" height="30.83"/>
</g>
<g fill="#000" stroke="none">
<rect x="998.42" y="656.92" width="30.83" height="227.67"/>
<rect x="998.42" y="201.58" width="30.83" height="227.67"/>
</g>
<rect x="170.75" y="201.58" width="30.83" height="683" stroke="none" fill="#000"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="486.17" y1="915.42" x2="486.17" y2="744.66"/>
<path d="M 486.17,744.66 A 170.75,170.75 0 0,0 315.42,915.42"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="1006.13" y1="656.92" x2="1006.13" y2="429.25"/>
<line x1="1021.54" y1="656.92" x2="1021.54" y2="429.25"/>
</g>
<g class="enclosure-walls" id="enclosure-closet">
<g fill="#333" stroke="none">
<rect x="407.91" y="486.17" width="21.34" height="56.92"/>
<rect x="407.91" y="201.58" width="21.34" height="142.29"/>
</g>
<rect x="201.58" y="521.74" width="227.67" height="21.34" stroke="none" fill="#333"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="407.91" y1="486.17" x2="265.61" y2="486.17"/>
<path d="M 265.61,486.17 A 142.29,142.29 0 0,1 407.91,343.87"/>
</g>
<g class="extension-walls" id="extension-window-nook">
<g fill="#000" stroke="none">
<rect x="569.17" y="0" width="59.29" height="30.83"/>
<rect x="856.13" y="0" width="59.29" height="30.83"/>
</g>
<rect x="884.58" y="30.83" width="30.83" height="170.75" stroke="none" fill="#000"/>
<rect x="569.17" y="30.83" width="30.83" height="170.75" stroke="none" fill="#000"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="628.46" y1="7.71" x2="856.13" y2="7.71"/>
<line x1="628.46" y1="23.12" x2="856.13" y2="23.12"/>
</g>
</g>
<g class="layer-labels">
<text x="600" y="543.08" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="28.46" font-weight="500" text-anchor="middle" dominant-baseline="central">Primary Bedroom</text>
<text x="315.42" y="372.33" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="28.46" font-weight="500" text-anchor="middle" dominant-baseline="central">Walk-in Closet</text>
<text x="742.29" y="116.21" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="28.46" font-weight="500" text-anchor="middle" dominant-baseline="central">Window Nook</text>
</g>
<g class="layer-dimensions">
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="201.58" y1="998.42" x2="998.42" y2="998.42"/>
<line x1="193.04" y1="1006.96" x2="210.12" y2="989.88"/>
<line x1="989.88" y1="1006.96" x2="1006.96" y2="989.88"/>
<text x="600" y="984.19" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="19.92" text-anchor="middle">14&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="87.75" y1="884.58" x2="87.75" y2="201.58"/>
<line x1="79.21" y1="893.12" x2="96.28" y2="876.05"/>
<line x1="79.21" y1="210.12" x2="96.28" y2="193.04"/>
<text x="73.52" y="543.08" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="19.92" text-anchor="middle" transform="rotate(-90, 73.52, 543.08)">12&apos;-0&quot;</text>
</g>
</g>
<g class="layer-title-block">
<g class="title-block" font-family="'Helvetica','Arial',sans-serif" fill="#000">
<rect x="830" y="1086.17" width="350" height="140" stroke="#000" stroke-width="0.50" fill="white"/>
<line x1="830" y1="1176.17" x2="1180" y2="1176.17" stroke="#000" stroke-width="0.35"/>
<text x="842" y="1110.17" font-size="18" font-weight="bold">Bedroom with Closet and Window Nook</text>
<text x="842" y="1214.17" font-size="12">Scale: 1/4in = 1ft</text>
<text x="1015" y="1214.17" fill="#666" font-size="10">FloorScript v0.1</text>
</g>
</g>
</svg>"
`;

exports[`visual regression > kitchen-reno existing plan renders consistently 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1232.85" width="1200" height="1232.85">
<rect x="0" y="0" width="1200" height="1232.85" fill="white"/>
<g class="layer-structural">
<g class="walls">
<rect x="190.73" y="190.73" width="818.54" height="31.79" stroke="none" fill="#000"/>
<rect x="190.73" y="858.28" width="818.54" height="23.84" stroke="none" fill="#333"/>
<rect x="985.43" y="222.52" width="23.84" height="635.76" stroke="none" fill="#333"/>
<g fill="#000" stroke="none">
<rect x="190.73" y="667.55" width="31.79" height="190.73"/>
<rect x="190.73" y="222.52" width="31.79" height="190.73"/>
</g>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="198.68" y1="667.55" x2="198.68" y2="413.25"/>
<line x1="214.57" y1="667.55" x2="214.57" y2="413.25"/>
</g>
</g>
<g class="layer-labels">
<text x="603.97" y="540.4" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="31.79" font-weight="500" text-anchor="middle" dominant-baseline="central">Kitchen</text>
</g>
<g class="layer-dimensions">
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="222.52" y1="985.43" x2="985.43" y2="985.43"/>
<line x1="212.98" y1="994.97" x2="232.05" y2="975.89"/>
<line x1="975.89" y1="994.97" x2="994.97" y2="975.89"/>
<text x="603.97" y="969.54" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="22.25" text-anchor="middle">12&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="95.36" y1="858.28" x2="95.36" y2="222.52"/>
<line x1="85.83" y1="867.81" x2="104.9" y2="848.74"/>
<line x1="85.83" y1="232.05" x2="104.9" y2="212.98"/>
<text x="79.47" y="540.4" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="22.25" text-anchor="middle" transform="rotate(-90, 79.47, 540.4)">10&apos;-0&quot;</text>
</g>
</g>
<g class="layer-title-block">
<g class="title-block" font-family="'Helvetica','Arial',sans-serif" fill="#000">
<rect x="830" y="1072.85" width="350" height="140" stroke="#000" stroke-width="0.50" fill="white"/>
<line x1="830" y1="1162.85" x2="1180" y2="1162.85" stroke="#000" stroke-width="0.35"/>
<text x="842" y="1096.85" font-size="18" font-weight="bold">Kitchen Renovation - 123 Main St</text>
<text x="842" y="1118.85" font-size="13">123 Main Street, Anytown, ST 12345</text>
<text x="842" y="1138.85" font-size="13">Jane Smith</text>
<text x="842" y="1182.85" font-size="12">Sheet: A1</text>
<text x="1015" y="1182.85" font-size="12">Date: 2026-02-11</text>
<text x="842" y="1200.85" font-size="12">Scale: 1/4in = 1ft</text>
<text x="1015" y="1200.85" fill="#666" font-size="10">FloorScript v0.1</text>
</g>
</g>
</svg>"
`;

exports[`visual regression > kitchen-reno proposed plan renders consistently 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1232.85" width="1200" height="1232.85">
<rect x="0" y="0" width="1200" height="1232.85" fill="white"/>
<g class="layer-structural">
<g class="walls">
<rect x="190.73" y="190.73" width="818.54" height="31.79" stroke="none" fill="#000"/>
<rect x="190.73" y="858.28" width="818.54" height="23.84" stroke="none" fill="#333"/>
<rect x="985.43" y="731.13" width="23.84" height="127.15" stroke="none" fill="#333"/>
<g fill="#000" stroke="none">
<rect x="190.73" y="667.55" width="31.79" height="190.73"/>
<rect x="190.73" y="222.52" width="31.79" height="190.73"/>
</g>
</g>
<g class="opening cased-opening" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="985.43" y1="731.13" x2="1009.27" y2="731.13"/>
<line x1="985.43" y1="731.13" x2="985.43" y2="766.89"/>
<line x1="1009.27" y1="731.13" x2="1009.27" y2="766.89"/>
<line x1="985.43" y1="222.52" x2="1009.27" y2="222.52"/>
<line x1="985.43" y1="222.52" x2="985.43" y2="186.75"/>
<line x1="1009.27" y1="222.52" x2="1009.27" y2="186.75"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="198.68" y1="667.55" x2="198.68" y2="413.25"/>
<line x1="214.57" y1="667.55" x2="214.57" y2="413.25"/>
</g>
</g>
<g class="layer-labels">
<text x="603.97" y="540.4" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="31.79" font-weight="500" text-anchor="middle" dominant-baseline="central">Kitchen</text>
</g>
<g class="layer-dimensions">
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="222.52" y1="985.43" x2="985.43" y2="985.43"/>
<line x1="212.98" y1="994.97" x2="232.05" y2="975.89"/>
<line x1="975.89" y1="994.97" x2="994.97" y2="975.89"/>
<text x="603.97" y="969.54" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="22.25" text-anchor="middle">12&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="95.36" y1="858.28" x2="95.36" y2="222.52"/>
<line x1="85.83" y1="867.81" x2="104.9" y2="848.74"/>
<line x1="85.83" y1="232.05" x2="104.9" y2="212.98"/>
<text x="79.47" y="540.4" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="22.25" text-anchor="middle" transform="rotate(-90, 79.47, 540.4)">10&apos;-0&quot;</text>
</g>
</g>
<g class="layer-title-block">
<g class="title-block" font-family="'Helvetica','Arial',sans-serif" fill="#000">
<rect x="830" y="1072.85" width="350" height="140" stroke="#000" stroke-width="0.50" fill="white"/>
<line x1="830" y1="1162.85" x2="1180" y2="1162.85" stroke="#000" stroke-width="0.35"/>
<text x="842" y="1096.85" font-size="18" font-weight="bold">Kitchen Renovation - 123 Main St</text>
<text x="842" y="1118.85" font-size="13">123 Main Street, Anytown, ST 12345</text>
<text x="842" y="1138.85" font-size="13">Jane Smith</text>
<text x="842" y="1182.85" font-size="12">Sheet: A1</text>
<text x="1015" y="1182.85" font-size="12">Date: 2026-02-11</text>
<text x="842" y="1200.85" font-size="12">Scale: 1/4in = 1ft</text>
<text x="1015" y="1200.85" fill="#666" font-size="10">FloorScript v0.1</text>
</g>
</g>
</svg>"
`;

exports[`visual regression > multi-room renders consistently 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1185.88" width="1200" height="1185.88">
<rect x="0" y="0" width="1200" height="1185.88" fill="white"/>
<g class="layer-structural">
<g class="walls">
<g fill="#333" stroke="none">
<rect x="645.71" y="436.76" width="13.06" height="34.82"/>
<rect x="645.71" y="123.34" width="13.06" height="104.47"/>
</g>
<rect x="419.35" y="541.23" width="226.36" height="18.86" stroke="none" fill="#333"/>
<g fill="#333" stroke="none">
<rect x="123.34" y="541.23" width="69.65" height="18.86"/>
<rect x="280.05" y="541.23" width="121.89" height="18.86"/>
</g>
<rect x="404.11" y="560.1" width="13.06" height="208.95" stroke="none" fill="#333"/>
<rect x="401.93" y="541.23" width="17.41" height="18.86" stroke="none" fill="#000"/>
<rect x="645.71" y="471.58" width="13.06" height="88.51" stroke="none" fill="#333"/>
<rect x="406.29" y="769.04" width="13.06" height="139.3" stroke="none" fill="#333"/>
<rect x="104.47" y="104.47" width="554.29" height="18.86" stroke="none" fill="#000"/>
<g fill="#000" stroke="none">
<rect x="104.47" y="401.93" width="18.86" height="158.16"/>
<rect x="104.47" y="123.34" width="18.86" height="174.12"/>
</g>
<rect x="645.71" y="104.47" width="449.82" height="18.86" stroke="none" fill="#000"/>
<rect x="645.71" y="471.58" width="449.82" height="13.06" stroke="none" fill="#333"/>
<g fill="#000" stroke="none">
<rect x="1076.66" y="367.11" width="18.86" height="104.47"/>
<rect x="1076.66" y="123.34" width="18.86" height="104.47"/>
</g>
<rect x="406.29" y="908.34" width="252.48" height="13.06" stroke="none" fill="#333"/>
<rect x="645.71" y="550.67" width="13.06" height="357.68" stroke="none" fill="#333"/>
<g fill="#000" stroke="none">
<rect x="104.47" y="769.04" width="88.51" height="18.86"/>
<rect x="297.46" y="769.04" width="117.53" height="18.86"/>
</g>
<rect x="104.47" y="550.67" width="18.86" height="218.38" stroke="none" fill="#000"/>
</g>
<g class="opening cased-opening" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="645.71" y1="436.76" x2="658.77" y2="436.76"/>
<line x1="645.71" y1="436.76" x2="645.71" y2="456.35"/>
<line x1="658.77" y1="436.76" x2="658.77" y2="456.35"/>
<line x1="645.71" y1="227.81" x2="658.77" y2="227.81"/>
<line x1="645.71" y1="227.81" x2="645.71" y2="208.22"/>
<line x1="658.77" y1="227.81" x2="658.77" y2="208.22"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="192.99" y1="560.1" x2="192.99" y2="647.16"/>
<path d="M 192.99,647.16 A 87.06,87.06 0 0,0 280.05,560.1"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="104.47" y1="297.46" x2="208.95" y2="297.46"/>
<path d="M 208.95,297.46 A 104.47,104.47 0 0,1 104.47,401.93"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="1081.38" y1="367.11" x2="1081.38" y2="227.81"/>
<line x1="1090.81" y1="367.11" x2="1090.81" y2="227.81"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="192.99" y1="773.76" x2="297.46" y2="773.76"/>
<line x1="192.99" y1="783.19" x2="297.46" y2="783.19"/>
</g>
</g>
<g class="layer-labels">
<text x="384.52" y="332.29" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="17.41" font-weight="500" text-anchor="middle" dominant-baseline="central">Living Room</text>
<text x="867.71" y="297.46" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="17.41" font-weight="500" text-anchor="middle" dominant-baseline="central">Kitchen</text>
<text x="532.53" y="734.22" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="17.41" font-weight="500" text-anchor="middle" dominant-baseline="central">Hallway</text>
<text x="262.64" y="664.57" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="17.41" font-weight="500" text-anchor="middle" dominant-baseline="central">Bathroom</text>
</g>
<g class="layer-dimensions">
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="123.34" y1="53.69" x2="645.71" y2="53.69"/>
<line x1="118.11" y1="58.91" x2="128.56" y2="48.46"/>
<line x1="640.48" y1="58.91" x2="650.93" y2="48.46"/>
<text x="384.52" y="44.98" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="12.19" text-anchor="middle">15&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="53.69" y1="541.23" x2="53.69" y2="123.34"/>
<line x1="48.46" y1="546.46" x2="58.91" y2="536.01"/>
<line x1="48.46" y1="128.56" x2="58.91" y2="118.11"/>
<text x="44.98" y="332.29" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="12.19" text-anchor="middle" transform="rotate(-90, 44.98, 332.29)">12&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="658.77" y1="541.23" x2="1076.66" y2="541.23"/>
<line x1="653.54" y1="546.46" x2="663.99" y2="536.01"/>
<line x1="1071.44" y1="546.46" x2="1081.89" y2="536.01"/>
<text x="867.71" y="532.53" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="12.19" text-anchor="middle">12&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="1146.31" y1="471.58" x2="1146.31" y2="123.34"/>
<line x1="1141.09" y1="476.81" x2="1151.54" y2="466.36"/>
<line x1="1141.09" y1="128.56" x2="1151.54" y2="118.11"/>
<text x="1137.61" y="297.46" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="12.19" text-anchor="middle" transform="rotate(-90, 1137.61, 297.46)">10&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="419.35" y1="977.99" x2="645.71" y2="977.99"/>
<line x1="414.12" y1="983.22" x2="424.57" y2="972.77"/>
<line x1="640.48" y1="983.22" x2="650.93" y2="972.77"/>
<text x="532.53" y="969.29" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="12.19" text-anchor="middle">6&apos;-6&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="715.36" y1="908.34" x2="715.36" y2="560.1"/>
<line x1="710.13" y1="913.57" x2="720.58" y2="903.12"/>
<line x1="710.13" y1="565.32" x2="720.58" y2="554.87"/>
<text x="706.65" y="734.22" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="12.19" text-anchor="middle" transform="rotate(-90, 706.65, 734.22)">10&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="123.34" y1="838.69" x2="401.93" y2="838.69"/>
<line x1="118.11" y1="843.92" x2="128.56" y2="833.47"/>
<line x1="396.71" y1="843.92" x2="407.16" y2="833.47"/>
<text x="262.64" y="829.99" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="12.19" text-anchor="middle">8&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="53.69" y1="769.04" x2="53.69" y2="560.1"/>
<line x1="48.46" y1="774.27" x2="58.91" y2="763.82"/>
<line x1="48.46" y1="565.32" x2="58.91" y2="554.87"/>
<text x="44.98" y="664.57" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="12.19" text-anchor="middle" transform="rotate(-90, 44.98, 664.57)">6&apos;-0&quot;</text>
</g>
</g>
<g class="layer-electrical">
<g class="electrical">
<g class="electrical-panel">
<rect x="175.57" y="166.87" width="34.82" height="52.24" stroke="#000" stroke-width="0.4mm" fill="#fff"/>
<text x="192.99" y="185.15" fill="#000" font-family="sans-serif" font-size="7.66" font-weight="bold" text-anchor="middle" dominant-baseline="central">PANEL</text>
<text x="192.99" y="203.43" fill="#000" font-family="sans-serif" font-size="6.27" text-anchor="middle" dominant-baseline="central">200A</text>
<text x="192.99" y="224.33" fill="#666" font-family="sans-serif" font-size="5.57" text-anchor="middle" dominant-baseline="hanging">Main Panel</text>
</g>
<polyline points="192.99,192.99 192.99,332.29 384.52,332.29" stroke="#333" stroke-width="0.25mm" fill="none"/>
<polyline points="192.99,192.99 645.71,192.99 854.66,192.99 854.66,297.46" stroke="#333" stroke-width="0.25mm" fill="none"/>
<g class="outlet outlet-duplex">
<circle cx="297.46" cy="550.67" r="12.19" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<line x1="288.93" y1="546.4" x2="305.99" y2="546.4" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="288.93" y1="554.93" x2="305.99" y2="554.93" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="outlet outlet-gfci">
<circle cx="798.07" cy="478.11" r="12.19" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="798.07" y="495.53" fill="#000" font-size="8.53" text-anchor="middle" dominant-baseline="hanging">GFI</text>
</g>
<g class="outlet outlet-gfci">
<circle cx="113.91" cy="664.57" r="12.19" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="113.91" y="681.98" fill="#000" font-size="8.53" text-anchor="middle" dominant-baseline="hanging">GFI</text>
</g>
<g class="switch switch-single">
<circle cx="113.91" cy="262.64" r="12.19" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="113.91" y="262.64" fill="#000" font-family="sans-serif" font-size="13.41" font-weight="bold" text-anchor="middle" dominant-baseline="central">S</text>
</g>
<g class="switch switch-three-way">
<circle cx="937.36" cy="478.11" r="12.19" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="937.36" y="478.11" fill="#000" font-family="sans-serif" font-size="13.41" font-weight="bold" text-anchor="middle" dominant-baseline="central">S3</text>
</g>
<g class="light-fixture light-recessed">
<rect x="369.9" y="317.66" width="29.25" height="29.25" stroke="#000" stroke-width="0.3mm" fill="none"/>
<circle cx="384.52" cy="332.29" r="8.53" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="light-fixture light-surface">
<circle cx="854.66" cy="297.46" r="12.19" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="841.73" y1="284.53" x2="846.04" y2="288.84" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="867.58" y1="284.53" x2="863.27" y2="288.84" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="841.73" y1="310.39" x2="846.04" y2="306.08" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="867.58" y1="310.39" x2="863.27" y2="306.08" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="smoke-detector">
<circle cx="384.52" cy="192.99" r="12.19" stroke="#000" stroke-width="0.3mm" fill="none"/>
<text x="384.52" y="192.99" fill="#000" font-family="sans-serif" font-size="10.97" text-anchor="middle" dominant-baseline="central">S/CO</text>
</g>
</g>
</g>
<g class="layer-plumbing">
<g class="plumbing">
<polyline points="297.46,745.83 280.05,769.04" stroke="#0000CC" stroke-width="0.4mm" fill="none"/>
<text x="285.27" y="769.04" fill="#0000CC" font-family="sans-serif" font-size="5.22" text-anchor="start" dominant-baseline="central">1/2in</text>
<polyline points="297.46,745.83 314.87,769.04" stroke="#CC0000" stroke-width="0.4mm" fill="none"/>
<text x="320.1" y="769.04" fill="#CC0000" font-family="sans-serif" font-size="5.22" text-anchor="start" dominant-baseline="central">1/2in</text>
<polyline points="192.99,728.42 192.99,769.04" stroke="#006600" stroke-width="0.5mm" fill="none"/>
<g class="plumbing-fixture fixture-toilet" transform="rotate(180, 192.9866989117291, 728.4159613059248)">
<rect x="172.09" y="687.79" width="41.79" height="20.31" stroke="#000" stroke-width="0.3mm" fill="none"/>
<ellipse cx="192.99" cy="736.54" rx="26.12" ry="32.5" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="plumbing-fixture fixture-bath-sink" transform="rotate(180, 297.4607013301088, 745.8282950423215)">
<ellipse cx="297.46" cy="745.83" rx="29.02" ry="23.22" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
</g>
</g>
<g class="layer-title-block">
<g class="title-block" font-family="'Helvetica','Arial',sans-serif" fill="#000">
<rect x="830" y="1025.88" width="350" height="140" stroke="#000" stroke-width="0.50" fill="white"/>
<line x1="830" y1="1115.88" x2="1180" y2="1115.88" stroke="#000" stroke-width="0.35"/>
<text x="842" y="1049.88" font-size="18" font-weight="bold">Multi-Room Floor Plan</text>
<text x="842" y="1071.88" font-size="13">456 Oak Avenue, Anytown, ST 12345</text>
<text x="842" y="1091.88" font-size="13">John Doe</text>
<text x="842" y="1135.88" font-size="12">Sheet: A1</text>
<text x="1015" y="1135.88" font-size="12">Date: 2026-02-11</text>
<text x="842" y="1153.88" font-size="12">Scale: 1/4in = 1ft</text>
<text x="1015" y="1153.88" fill="#666" font-size="10">FloorScript v0.1</text>
</g>
</g>
</svg>"
`;

exports[`visual regression > multi-room with electrical hidden renders consistently 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1185.88" width="1200" height="1185.88">
<rect x="0" y="0" width="1200" height="1185.88" fill="white"/>
<g class="layer-structural">
<g class="walls">
<g fill="#333" stroke="none">
<rect x="645.71" y="436.76" width="13.06" height="34.82"/>
<rect x="645.71" y="123.34" width="13.06" height="104.47"/>
</g>
<rect x="419.35" y="541.23" width="226.36" height="18.86" stroke="none" fill="#333"/>
<g fill="#333" stroke="none">
<rect x="123.34" y="541.23" width="69.65" height="18.86"/>
<rect x="280.05" y="541.23" width="121.89" height="18.86"/>
</g>
<rect x="404.11" y="560.1" width="13.06" height="208.95" stroke="none" fill="#333"/>
<rect x="401.93" y="541.23" width="17.41" height="18.86" stroke="none" fill="#000"/>
<rect x="645.71" y="471.58" width="13.06" height="88.51" stroke="none" fill="#333"/>
<rect x="406.29" y="769.04" width="13.06" height="139.3" stroke="none" fill="#333"/>
<rect x="104.47" y="104.47" width="554.29" height="18.86" stroke="none" fill="#000"/>
<g fill="#000" stroke="none">
<rect x="104.47" y="401.93" width="18.86" height="158.16"/>
<rect x="104.47" y="123.34" width="18.86" height="174.12"/>
</g>
<rect x="645.71" y="104.47" width="449.82" height="18.86" stroke="none" fill="#000"/>
<rect x="645.71" y="471.58" width="449.82" height="13.06" stroke="none" fill="#333"/>
<g fill="#000" stroke="none">
<rect x="1076.66" y="367.11" width="18.86" height="104.47"/>
<rect x="1076.66" y="123.34" width="18.86" height="104.47"/>
</g>
<rect x="406.29" y="908.34" width="252.48" height="13.06" stroke="none" fill="#333"/>
<rect x="645.71" y="550.67" width="13.06" height="357.68" stroke="none" fill="#333"/>
<g fill="#000" stroke="none">
<rect x="104.47" y="769.04" width="88.51" height="18.86"/>
<rect x="297.46" y="769.04" width="117.53" height="18.86"/>
</g>
<rect x="104.47" y="550.67" width="18.86" height="218.38" stroke="none" fill="#000"/>
</g>
<g class="opening cased-opening" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="645.71" y1="436.76" x2="658.77" y2="436.76"/>
<line x1="645.71" y1="436.76" x2="645.71" y2="456.35"/>
<line x1="658.77" y1="436.76" x2="658.77" y2="456.35"/>
<line x1="645.71" y1="227.81" x2="658.77" y2="227.81"/>
<line x1="645.71" y1="227.81" x2="645.71" y2="208.22"/>
<line x1="658.77" y1="227.81" x2="658.77" y2="208.22"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="192.99" y1="560.1" x2="192.99" y2="647.16"/>
<path d="M 192.99,647.16 A 87.06,87.06 0 0,0 280.05,560.1"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="104.47" y1="297.46" x2="208.95" y2="297.46"/>
<path d="M 208.95,297.46 A 104.47,104.47 0 0,1 104.47,401.93"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="1081.38" y1="367.11" x2="1081.38" y2="227.81"/>
<line x1="1090.81" y1="367.11" x2="1090.81" y2="227.81"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="192.99" y1="773.76" x2="297.46" y2="773.76"/>
<line x1="192.99" y1="783.19" x2="297.46" y2="783.19"/>
</g>
</g>
<g class="layer-labels">
<text x="384.52" y="332.29" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="17.41" font-weight="500" text-anchor="middle" dominant-baseline="central">Living Room</text>
<text x="867.71" y="297.46" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="17.41" font-weight="500" text-anchor="middle" dominant-baseline="central">Kitchen</text>
<text x="532.53" y="734.22" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="17.41" font-weight="500" text-anchor="middle" dominant-baseline="central">Hallway</text>
<text x="262.64" y="664.57" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="17.41" font-weight="500" text-anchor="middle" dominant-baseline="central">Bathroom</text>
</g>
<g class="layer-dimensions">
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="123.34" y1="53.69" x2="645.71" y2="53.69"/>
<line x1="118.11" y1="58.91" x2="128.56" y2="48.46"/>
<line x1="640.48" y1="58.91" x2="650.93" y2="48.46"/>
<text x="384.52" y="44.98" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="12.19" text-anchor="middle">15&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="53.69" y1="541.23" x2="53.69" y2="123.34"/>
<line x1="48.46" y1="546.46" x2="58.91" y2="536.01"/>
<line x1="48.46" y1="128.56" x2="58.91" y2="118.11"/>
<text x="44.98" y="332.29" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="12.19" text-anchor="middle" transform="rotate(-90, 44.98, 332.29)">12&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="658.77" y1="541.23" x2="1076.66" y2="541.23"/>
<line x1="653.54" y1="546.46" x2="663.99" y2="536.01"/>
<line x1="1071.44" y1="546.46" x2="1081.89" y2="536.01"/>
<text x="867.71" y="532.53" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="12.19" text-anchor="middle">12&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="1146.31" y1="471.58" x2="1146.31" y2="123.34"/>
<line x1="1141.09" y1="476.81" x2="1151.54" y2="466.36"/>
<line x1="1141.09" y1="128.56" x2="1151.54" y2="118.11"/>
<text x="1137.61" y="297.46" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="12.19" text-anchor="middle" transform="rotate(-90, 1137.61, 297.46)">10&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="419.35" y1="977.99" x2="645.71" y2="977.99"/>
<line x1="414.12" y1="983.22" x2="424.57" y2="972.77"/>
<line x1="640.48" y1="983.22" x2="650.93" y2="972.77"/>
<text x="532.53" y="969.29" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="12.19" text-anchor="middle">6&apos;-6&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="715.36" y1="908.34" x2="715.36" y2="560.1"/>
<line x1="710.13" y1="913.57" x2="720.58" y2="903.12"/>
<line x1="710.13" y1="565.32" x2="720.58" y2="554.87"/>
<text x="706.65" y="734.22" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="12.19" text-anchor="middle" transform="rotate(-90, 706.65, 734.22)">10&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="123.34" y1="838.69" x2="401.93" y2="838.69"/>
<line x1="118.11" y1="843.92" x2="128.56" y2="833.47"/>
<line x1="396.71" y1="843.92" x2="407.16" y2="833.47"/>
<text x="262.64" y="829.99" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="12.19" text-anchor="middle">8&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="53.69" y1="769.04" x2="53.69" y2="560.1"/>
<line x1="48.46" y1="774.27" x2="58.91" y2="763.82"/>
<line x1="48.46" y1="565.32" x2="58.91" y2="554.87"/>
<text x="44.98" y="664.57" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="12.19" text-anchor="middle" transform="rotate(-90, 44.98, 664.57)">6&apos;-0&quot;</text>
</g>
</g>
<g class="layer-plumbing">
<g class="plumbing">
<polyline points="297.46,745.83 280.05,769.04" stroke="#0000CC" stroke-width="0.4mm" fill="none"/>
<text x="285.27" y="769.04" fill="#0000CC" font-family="sans-serif" font-size="5.22" text-anchor="start" dominant-baseline="central">1/2in</text>
<polyline points="297.46,745.83 314.87,769.04" stroke="#CC0000" stroke-width="0.4mm" fill="none"/>
<text x="320.1" y="769.04" fill="#CC0000" font-family="sans-serif" font-size="5.22" text-anchor="start" dominant-baseline="central">1/2in</text>
<polyline points="192.99,728.42 192.99,769.04" stroke="#006600" stroke-width="0.5mm" fill="none"/>
<g class="plumbing-fixture fixture-toilet" transform="rotate(180, 192.9866989117291, 728.4159613059248)">
<rect x="172.09" y="687.79" width="41.79" height="20.31" stroke="#000" stroke-width="0.3mm" fill="none"/>
<ellipse cx="192.99" cy="736.54" rx="26.12" ry="32.5" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="plumbing-fixture fixture-bath-sink" transform="rotate(180, 297.4607013301088, 745.8282950423215)">
<ellipse cx="297.46" cy="745.83" rx="29.02" ry="23.22" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
</g>
</g>
<g class="layer-title-block">
<g class="title-block" font-family="'Helvetica','Arial',sans-serif" fill="#000">
<rect x="830" y="1025.88" width="350" height="140" stroke="#000" stroke-width="0.50" fill="white"/>
<line x1="830" y1="1115.88" x2="1180" y2="1115.88" stroke="#000" stroke-width="0.35"/>
<text x="842" y="1049.88" font-size="18" font-weight="bold">Multi-Room Floor Plan</text>
<text x="842" y="1071.88" font-size="13">456 Oak Avenue, Anytown, ST 12345</text>
<text x="842" y="1091.88" font-size="13">John Doe</text>
<text x="842" y="1135.88" font-size="12">Sheet: A1</text>
<text x="1015" y="1135.88" font-size="12">Date: 2026-02-11</text>
<text x="842" y="1153.88" font-size="12">Scale: 1/4in = 1ft</text>
<text x="1015" y="1153.88" fill="#666" font-size="10">FloorScript v0.1</text>
</g>
</g>
</svg>"
`;

exports[`visual regression > multi-room with plumbing hidden renders consistently 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1185.88" width="1200" height="1185.88">
<rect x="0" y="0" width="1200" height="1185.88" fill="white"/>
<g class="layer-structural">
<g class="walls">
<g fill="#333" stroke="none">
<rect x="645.71" y="436.76" width="13.06" height="34.82"/>
<rect x="645.71" y="123.34" width="13.06" height="104.47"/>
</g>
<rect x="419.35" y="541.23" width="226.36" height="18.86" stroke="none" fill="#333"/>
<g fill="#333" stroke="none">
<rect x="123.34" y="541.23" width="69.65" height="18.86"/>
<rect x="280.05" y="541.23" width="121.89" height="18.86"/>
</g>
<rect x="404.11" y="560.1" width="13.06" height="208.95" stroke="none" fill="#333"/>
<rect x="401.93" y="541.23" width="17.41" height="18.86" stroke="none" fill="#000"/>
<rect x="645.71" y="471.58" width="13.06" height="88.51" stroke="none" fill="#333"/>
<rect x="406.29" y="769.04" width="13.06" height="139.3" stroke="none" fill="#333"/>
<rect x="104.47" y="104.47" width="554.29" height="18.86" stroke="none" fill="#000"/>
<g fill="#000" stroke="none">
<rect x="104.47" y="401.93" width="18.86" height="158.16"/>
<rect x="104.47" y="123.34" width="18.86" height="174.12"/>
</g>
<rect x="645.71" y="104.47" width="449.82" height="18.86" stroke="none" fill="#000"/>
<rect x="645.71" y="471.58" width="449.82" height="13.06" stroke="none" fill="#333"/>
<g fill="#000" stroke="none">
<rect x="1076.66" y="367.11" width="18.86" height="104.47"/>
<rect x="1076.66" y="123.34" width="18.86" height="104.47"/>
</g>
<rect x="406.29" y="908.34" width="252.48" height="13.06" stroke="none" fill="#333"/>
<rect x="645.71" y="550.67" width="13.06" height="357.68" stroke="none" fill="#333"/>
<g fill="#000" stroke="none">
<rect x="104.47" y="769.04" width="88.51" height="18.86"/>
<rect x="297.46" y="769.04" width="117.53" height="18.86"/>
</g>
<rect x="104.47" y="550.67" width="18.86" height="218.38" stroke="none" fill="#000"/>
</g>
<g class="opening cased-opening" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="645.71" y1="436.76" x2="658.77" y2="436.76"/>
<line x1="645.71" y1="436.76" x2="645.71" y2="456.35"/>
<line x1="658.77" y1="436.76" x2="658.77" y2="456.35"/>
<line x1="645.71" y1="227.81" x2="658.77" y2="227.81"/>
<line x1="645.71" y1="227.81" x2="645.71" y2="208.22"/>
<line x1="658.77" y1="227.81" x2="658.77" y2="208.22"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="192.99" y1="560.1" x2="192.99" y2="647.16"/>
<path d="M 192.99,647.16 A 87.06,87.06 0 0,0 280.05,560.1"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="104.47" y1="297.46" x2="208.95" y2="297.46"/>
<path d="M 208.95,297.46 A 104.47,104.47 0 0,1 104.47,401.93"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="1081.38" y1="367.11" x2="1081.38" y2="227.81"/>
<line x1="1090.81" y1="367.11" x2="1090.81" y2="227.81"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="192.99" y1="773.76" x2="297.46" y2="773.76"/>
<line x1="192.99" y1="783.19" x2="297.46" y2="783.19"/>
</g>
</g>
<g class="layer-labels">
<text x="384.52" y="332.29" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="17.41" font-weight="500" text-anchor="middle" dominant-baseline="central">Living Room</text>
<text x="867.71" y="297.46" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="17.41" font-weight="500" text-anchor="middle" dominant-baseline="central">Kitchen</text>
<text x="532.53" y="734.22" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="17.41" font-weight="500" text-anchor="middle" dominant-baseline="central">Hallway</text>
<text x="262.64" y="664.57" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="17.41" font-weight="500" text-anchor="middle" dominant-baseline="central">Bathroom</text>
</g>
<g class="layer-dimensions">
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="123.34" y1="53.69" x2="645.71" y2="53.69"/>
<line x1="118.11" y1="58.91" x2="128.56" y2="48.46"/>
<line x1="640.48" y1="58.91" x2="650.93" y2="48.46"/>
<text x="384.52" y="44.98" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="12.19" text-anchor="middle">15&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="53.69" y1="541.23" x2="53.69" y2="123.34"/>
<line x1="48.46" y1="546.46" x2="58.91" y2="536.01"/>
<line x1="48.46" y1="128.56" x2="58.91" y2="118.11"/>
<text x="44.98" y="332.29" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="12.19" text-anchor="middle" transform="rotate(-90, 44.98, 332.29)">12&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="658.77" y1="541.23" x2="1076.66" y2="541.23"/>
<line x1="653.54" y1="546.46" x2="663.99" y2="536.01"/>
<line x1="1071.44" y1="546.46" x2="1081.89" y2="536.01"/>
<text x="867.71" y="532.53" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="12.19" text-anchor="middle">12&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="1146.31" y1="471.58" x2="1146.31" y2="123.34"/>
<line x1="1141.09" y1="476.81" x2="1151.54" y2="466.36"/>
<line x1="1141.09" y1="128.56" x2="1151.54" y2="118.11"/>
<text x="1137.61" y="297.46" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="12.19" text-anchor="middle" transform="rotate(-90, 1137.61, 297.46)">10&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="419.35" y1="977.99" x2="645.71" y2="977.99"/>
<line x1="414.12" y1="983.22" x2="424.57" y2="972.77"/>
<line x1="640.48" y1="983.22" x2="650.93" y2="972.77"/>
<text x="532.53" y="969.29" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="12.19" text-anchor="middle">6&apos;-6&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="715.36" y1="908.34" x2="715.36" y2="560.1"/>
<line x1="710.13" y1="913.57" x2="720.58" y2="903.12"/>
<line x1="710.13" y1="565.32" x2="720.58" y2="554.87"/>
<text x="706.65" y="734.22" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="12.19" text-anchor="middle" transform="rotate(-90, 706.65, 734.22)">10&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="123.34" y1="838.69" x2="401.93" y2="838.69"/>
<line x1="118.11" y1="843.92" x2="128.56" y2="833.47"/>
<line x1="396.71" y1="843.92" x2="407.16" y2="833.47"/>
<text x="262.64" y="829.99" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="12.19" text-anchor="middle">8&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="53.69" y1="769.04" x2="53.69" y2="560.1"/>
<line x1="48.46" y1="774.27" x2="58.91" y2="763.82"/>
<line x1="48.46" y1="565.32" x2="58.91" y2="554.87"/>
<text x="44.98" y="664.57" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="12.19" text-anchor="middle" transform="rotate(-90, 44.98, 664.57)">6&apos;-0&quot;</text>
</g>
</g>
<g class="layer-electrical">
<g class="electrical">
<g class="electrical-panel">
<rect x="175.57" y="166.87" width="34.82" height="52.24" stroke="#000" stroke-width="0.4mm" fill="#fff"/>
<text x="192.99" y="185.15" fill="#000" font-family="sans-serif" font-size="7.66" font-weight="bold" text-anchor="middle" dominant-baseline="central">PANEL</text>
<text x="192.99" y="203.43" fill="#000" font-family="sans-serif" font-size="6.27" text-anchor="middle" dominant-baseline="central">200A</text>
<text x="192.99" y="224.33" fill="#666" font-family="sans-serif" font-size="5.57" text-anchor="middle" dominant-baseline="hanging">Main Panel</text>
</g>
<polyline points="192.99,192.99 192.99,332.29 384.52,332.29" stroke="#333" stroke-width="0.25mm" fill="none"/>
<polyline points="192.99,192.99 645.71,192.99 854.66,192.99 854.66,297.46" stroke="#333" stroke-width="0.25mm" fill="none"/>
<g class="outlet outlet-duplex">
<circle cx="297.46" cy="550.67" r="12.19" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<line x1="288.93" y1="546.4" x2="305.99" y2="546.4" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="288.93" y1="554.93" x2="305.99" y2="554.93" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="outlet outlet-gfci">
<circle cx="798.07" cy="478.11" r="12.19" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="798.07" y="495.53" fill="#000" font-size="8.53" text-anchor="middle" dominant-baseline="hanging">GFI</text>
</g>
<g class="outlet outlet-gfci">
<circle cx="113.91" cy="664.57" r="12.19" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="113.91" y="681.98" fill="#000" font-size="8.53" text-anchor="middle" dominant-baseline="hanging">GFI</text>
</g>
<g class="switch switch-single">
<circle cx="113.91" cy="262.64" r="12.19" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="113.91" y="262.64" fill="#000" font-family="sans-serif" font-size="13.41" font-weight="bold" text-anchor="middle" dominant-baseline="central">S</text>
</g>
<g class="switch switch-three-way">
<circle cx="937.36" cy="478.11" r="12.19" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="937.36" y="478.11" fill="#000" font-family="sans-serif" font-size="13.41" font-weight="bold" text-anchor="middle" dominant-baseline="central">S3</text>
</g>
<g class="light-fixture light-recessed">
<rect x="369.9" y="317.66" width="29.25" height="29.25" stroke="#000" stroke-width="0.3mm" fill="none"/>
<circle cx="384.52" cy="332.29" r="8.53" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="light-fixture light-surface">
<circle cx="854.66" cy="297.46" r="12.19" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="841.73" y1="284.53" x2="846.04" y2="288.84" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="867.58" y1="284.53" x2="863.27" y2="288.84" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="841.73" y1="310.39" x2="846.04" y2="306.08" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="867.58" y1="310.39" x2="863.27" y2="306.08" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="smoke-detector">
<circle cx="384.52" cy="192.99" r="12.19" stroke="#000" stroke-width="0.3mm" fill="none"/>
<text x="384.52" y="192.99" fill="#000" font-family="sans-serif" font-size="10.97" text-anchor="middle" dominant-baseline="central">S/CO</text>
</g>
</g>
</g>
<g class="layer-title-block">
<g class="title-block" font-family="'Helvetica','Arial',sans-serif" fill="#000">
<rect x="830" y="1025.88" width="350" height="140" stroke="#000" stroke-width="0.50" fill="white"/>
<line x1="830" y1="1115.88" x2="1180" y2="1115.88" stroke="#000" stroke-width="0.35"/>
<text x="842" y="1049.88" font-size="18" font-weight="bold">Multi-Room Floor Plan</text>
<text x="842" y="1071.88" font-size="13">456 Oak Avenue, Anytown, ST 12345</text>
<text x="842" y="1091.88" font-size="13">John Doe</text>
<text x="842" y="1135.88" font-size="12">Sheet: A1</text>
<text x="1015" y="1135.88" font-size="12">Date: 2026-02-11</text>
<text x="842" y="1153.88" font-size="12">Scale: 1/4in = 1ft</text>
<text x="1015" y="1153.88" fill="#666" font-size="10">FloorScript v0.1</text>
</g>
</g>
</svg>"
`;

exports[`visual regression > renders consistently with options disabled 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1036.98" width="1200" height="1036.98">
<rect x="0" y="0" width="1200" height="1036.98" fill="white"/>
<g class="layer-structural">
<g class="walls">
<rect x="163.02" y="163.02" width="873.96" height="29.43" stroke="none" fill="#000"/>
<rect x="163.02" y="844.53" width="873.96" height="29.43" stroke="none" fill="#000"/>
<g fill="#000" stroke="none">
<rect x="1007.55" y="681.51" width="29.43" height="163.02"/>
<rect x="1007.55" y="192.45" width="29.43" height="163.02"/>
</g>
<g fill="#000" stroke="none">
<rect x="163.02" y="627.17" width="29.43" height="217.36"/>
<rect x="163.02" y="192.45" width="29.43" height="271.7"/>
</g>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="1014.91" y1="681.51" x2="1014.91" y2="355.47"/>
<line x1="1029.62" y1="681.51" x2="1029.62" y2="355.47"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="163.02" y1="464.15" x2="326.04" y2="464.15"/>
<path d="M 326.04,464.15 A 163.02,163.02 0 0,1 163.02,627.17"/>
</g>
</g>
</svg>"
`;

exports[`visual regression > single-room renders consistently 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1196.98" width="1200" height="1196.98">
<rect x="0" y="0" width="1200" height="1196.98" fill="white"/>
<g class="layer-structural">
<g class="walls">
<rect x="163.02" y="163.02" width="873.96" height="29.43" stroke="none" fill="#000"/>
<rect x="163.02" y="844.53" width="873.96" height="29.43" stroke="none" fill="#000"/>
<g fill="#000" stroke="none">
<rect x="1007.55" y="681.51" width="29.43" height="163.02"/>
<rect x="1007.55" y="192.45" width="29.43" height="163.02"/>
</g>
<g fill="#000" stroke="none">
<rect x="163.02" y="627.17" width="29.43" height="217.36"/>
<rect x="163.02" y="192.45" width="29.43" height="271.7"/>
</g>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="1014.91" y1="681.51" x2="1014.91" y2="355.47"/>
<line x1="1029.62" y1="681.51" x2="1029.62" y2="355.47"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="163.02" y1="464.15" x2="326.04" y2="464.15"/>
<path d="M 326.04,464.15 A 163.02,163.02 0 0,1 163.02,627.17"/>
</g>
</g>
<g class="layer-labels">
<text x="600" y="518.49" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="27.17" font-weight="500" text-anchor="middle" dominant-baseline="central">Living Room</text>
</g>
<g class="layer-dimensions">
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="192.45" y1="953.21" x2="1007.55" y2="953.21"/>
<line x1="184.3" y1="961.36" x2="200.6" y2="945.06"/>
<line x1="999.4" y1="961.36" x2="1015.7" y2="945.06"/>
<text x="600" y="939.62" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="19.02" text-anchor="middle">15&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="83.77" y1="844.53" x2="83.77" y2="192.45"/>
<line x1="75.62" y1="852.68" x2="91.92" y2="836.38"/>
<line x1="75.62" y1="200.6" x2="91.92" y2="184.3"/>
<text x="70.19" y="518.49" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="19.02" text-anchor="middle" transform="rotate(-90, 70.19, 518.49)">12&apos;-0&quot;</text>
</g>
</g>
<g class="layer-title-block">
<g class="title-block" font-family="'Helvetica','Arial',sans-serif" fill="#000">
<rect x="830" y="1036.98" width="350" height="140" stroke="#000" stroke-width="0.50" fill="white"/>
<line x1="830" y1="1126.98" x2="1180" y2="1126.98" stroke="#000" stroke-width="0.35"/>
<text x="842" y="1060.98" font-size="18" font-weight="bold">Single Room</text>
<text x="842" y="1164.98" font-size="12">Scale: 1/4in = 1ft</text>
<text x="1015" y="1164.98" fill="#666" font-size="10">FloorScript v0.1</text>
</g>
</g>
</svg>"
`;

exports[`visual regression > single-room renders consistently at different widths 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 598.49" width="600" height="598.49">
<rect x="0" y="0" width="600" height="598.49" fill="white"/>
<g class="layer-structural">
<g class="walls">
<rect x="81.51" y="81.51" width="436.98" height="14.72" stroke="none" fill="#000"/>
<rect x="81.51" y="422.26" width="436.98" height="14.72" stroke="none" fill="#000"/>
<g fill="#000" stroke="none">
<rect x="503.77" y="340.75" width="14.72" height="81.51"/>
<rect x="503.77" y="96.23" width="14.72" height="81.51"/>
</g>
<g fill="#000" stroke="none">
<rect x="81.51" y="313.58" width="14.72" height="108.68"/>
<rect x="81.51" y="96.23" width="14.72" height="135.85"/>
</g>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="507.45" y1="340.75" x2="507.45" y2="177.74"/>
<line x1="514.81" y1="340.75" x2="514.81" y2="177.74"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="81.51" y1="232.08" x2="163.02" y2="232.08"/>
<path d="M 163.02,232.08 A 81.51,81.51 0 0,1 81.51,313.58"/>
</g>
</g>
<g class="layer-labels">
<text x="300" y="259.25" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="13.58" font-weight="500" text-anchor="middle" dominant-baseline="central">Living Room</text>
</g>
<g class="layer-dimensions">
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="96.23" y1="476.6" x2="503.77" y2="476.6"/>
<line x1="92.15" y1="480.68" x2="100.3" y2="472.53"/>
<line x1="499.7" y1="480.68" x2="507.85" y2="472.53"/>
<text x="300" y="469.81" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="9.51" text-anchor="middle">15&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="41.89" y1="422.26" x2="41.89" y2="96.23"/>
<line x1="37.81" y1="426.34" x2="45.96" y2="418.19"/>
<line x1="37.81" y1="100.3" x2="45.96" y2="92.15"/>
<text x="35.09" y="259.25" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="9.51" text-anchor="middle" transform="rotate(-90, 35.09, 259.25)">12&apos;-0&quot;</text>
</g>
</g>
<g class="layer-title-block">
<g class="title-block" font-family="'Helvetica','Arial',sans-serif" fill="#000">
<rect x="415" y="518.49" width="175" height="70" stroke="#000" stroke-width="0.25" fill="white"/>
<line x1="415" y1="563.49" x2="590" y2="563.49" stroke="#000" stroke-width="0.17"/>
<text x="421" y="530.49" font-size="9" font-weight="bold">Single Room</text>
<text x="421" y="582.49" font-size="6">Scale: 1/4in = 1ft</text>
<text x="507.5" y="582.49" fill="#666" font-size="5">FloorScript v0.1</text>
</g>
</g>
</svg>"
`;

exports[`visual regression > single-room renders consistently at different widths 2`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2400 2393.96" width="2400" height="2393.96">
<rect x="0" y="0" width="2400" height="2393.96" fill="white"/>
<g class="layer-structural">
<g class="walls">
<rect x="326.04" y="326.04" width="1747.92" height="58.87" stroke="none" fill="#000"/>
<rect x="326.04" y="1689.06" width="1747.92" height="58.87" stroke="none" fill="#000"/>
<g fill="#000" stroke="none">
<rect x="2015.09" y="1363.02" width="58.87" height="326.04"/>
<rect x="2015.09" y="384.91" width="58.87" height="326.04"/>
</g>
<g fill="#000" stroke="none">
<rect x="326.04" y="1254.34" width="58.87" height="434.72"/>
<rect x="326.04" y="384.91" width="58.87" height="543.4"/>
</g>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="2029.81" y1="1363.02" x2="2029.81" y2="710.94"/>
<line x1="2059.25" y1="1363.02" x2="2059.25" y2="710.94"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="326.04" y1="928.3" x2="652.08" y2="928.3"/>
<path d="M 652.08,928.3 A 326.04,326.04 0 0,1 326.04,1254.34"/>
</g>
</g>
<g class="layer-labels">
<text x="1200" y="1036.98" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="54.34" font-weight="500" text-anchor="middle" dominant-baseline="central">Living Room</text>
</g>
<g class="layer-dimensions">
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="384.91" y1="1906.42" x2="2015.09" y2="1906.42"/>
<line x1="368.6" y1="1922.72" x2="401.21" y2="1890.11"/>
<line x1="1998.79" y1="1922.72" x2="2031.4" y2="1890.11"/>
<text x="1200" y="1879.25" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="38.04" text-anchor="middle">15&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="167.55" y1="1689.06" x2="167.55" y2="384.91"/>
<line x1="151.25" y1="1705.36" x2="183.85" y2="1672.75"/>
<line x1="151.25" y1="401.21" x2="183.85" y2="368.6"/>
<text x="140.38" y="1036.98" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="38.04" text-anchor="middle" transform="rotate(-90, 140.38, 1036.98)">12&apos;-0&quot;</text>
</g>
</g>
<g class="layer-title-block">
<g class="title-block" font-family="'Helvetica','Arial',sans-serif" fill="#000">
<rect x="1660" y="2073.96" width="700" height="280" stroke="#000" stroke-width="1.00" fill="white"/>
<line x1="1660" y1="2253.96" x2="2360" y2="2253.96" stroke="#000" stroke-width="0.70"/>
<text x="1684" y="2121.96" font-size="36" font-weight="bold">Single Room</text>
<text x="1684" y="2329.96" font-size="24">Scale: 1/4in = 1ft</text>
<text x="2030" y="2329.96" fill="#666" font-size="20">FloorScript v0.1</text>
</g>
</g>
</svg>"
`;
